# tfcopy

./: CMakeLists.txt  README.md
cmake/: conan.cmake  config.cmake
src/: CMakeLists.txt  base_panel.cpp  base_panel.hpp  copy_panel.cpp  copy_panel.hpp  data_model.cpp  data_model.hpp  loading_panel.cpp  loading_panel.hpp  main.cpp  startup_panel.cpp  startup_panel.hpp  utilities.cpp  utilities.hpp
