################################################################################
#####
##### Tectiform TFCopy CMake Configuration File
##### Created by: Steve Wilson
#####
################################################################################

cmake_minimum_required(VERSION 3.20)

project(TFCopy)

include(cmake/config.cmake)

add_subdirectory(src)


